nova atualização do iframe003

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -12,7 +12,7 @@
 
         iframe{
             width: 95vw;
-            height: 460px;
+            height: 470px;
             border: 2px solid black;
         }
     </style>
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt maxime provident labore illum, laborum doloribus ex ut, fuga, voluptates aliquam sed? Asperiores libero nesciunt tempore culpa iste? Vitae, sint non?</p>
 
-    <iframe name="frame" src=""><p>Infelizmente seu navegador não é compativel com isso!</p></iframe>
+    <iframe name="frame" srcdoc="<h1>Escolha uma as opções acima</h1>"><p>Infelizmente seu navegador não é compativel com isso!</p></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo libero illum quia aut doloremque dignissimos neque ea voluptate nobis distinctio laboriosam fuga excepturi officia voluptatum temporibus, quis autem adipisci voluptatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, voluptate. Odio deleniti dolore facere dolorem! Velit quae sint nisi ipsa sunt aperiam, cum eveniet, eius consectetur neque veritatis sapiente atque.</p>
 </body>
