--- a/exercicios/ex025/form007.html
+++ b/exercicios/ex025/form007.html
@@ -12,7 +12,7 @@
         <p>
             <label for="iest">Estado</label>
             <select name="est" id="iest">
-                <option value="" selec>Selecione</option>
+                <option value="" selected>Selecione</option>
                 <optgroup label="Região Sudeste">
                     <option value="SP">São Paulo</option>
                     <option value="MG">Minas Gerais</option>
